<resources>
    <string name="app_name">SmsHandler</string>

    <string name="enter_token">Введите токен</string>
    <string name="enter_login">Введите логин</string>
    <string name="enter_password">Введите пароль</string>
    <string name="enter_number">Введите ваш номер телефона</string>
    <string name="enter_all">Заполните все поля!!!</string>
    <string name="start_handle">Запустить отправку смс</string>
    <string name="app_worked_in_background_message">Приложение работает в фоновом режиме</string>
    <string name="stop_send_sms">Остановить отправку смс</string>
    <string name="bad_authorization_message">Не верные данные для входа</string>

    <string name="login_with_token_menu_title">Войти с помощью токена</string>
    <string name="login_with_login_menu_title">Войти с помощью логина</string>

    <string name="notification_message">Данное уведомление позволяет приложению работать с большой стабильностью</string>
</resources>